decode events
